# python-sdk

./: README.md  pyproject.toml  setup.py
src/mailchk/: __init__.py  client.py  config.py  django_integration.py  exceptions.py  fastapi_integration.py  models.py
tests/: conftest.py  test_client.py  test_config.py  test_exceptions.py  test_models.py
